Added swagger docs